--- a/en/index.qmd
+++ b/en/index.qmd
@@ -21,21 +21,21 @@ listing:
 # Brewing coffee, exchanging words. As the steam drifts upward, time softens, and the world of statistics opens little by little.
 
 
-These small conversations between a statistician father and his clinician daughter became the seed of this site. Questions born in the middle of research, numbers that caught me while reading a paper, and occasionally, glimpses of how researchers conduct themselves—the things that truly matter tend to lie scattered quietly—across everyday life, clinical practice, causality, data, cognition, and language.
+These small conversations between a statistician father and his clinician daughter became the seed of this site. Questions born in the middle of research, numbers that snagged me while reading a paper, and occasionally, glimpses of how researchers conduct themselves—the things that truly matter tend to lie scattered quietly across everyday life, clinical practice, causality, data, cognition, and language.
 
 Over coffee, their light conversation gathers these fragments one by one, as if weaving them into a single story, careful not to disturb their totality.
 
-From survival curves and misread p-values to the layered relationship between causality and statistical inference — the episodes hide small clues, arranged like a gentle spiral, yet speak in words warm enough to hold between your hands on a winter morning.
+From survival curves and misread p-values to the layered relationship between causality and statistical inference, each episode leaves a few gentle clues—warm enough to hold on a winter morning.
 
-Mathematics and medicine make their appearances, but feel free to take only what you need. Some episodes can be reproduced in R. And as their dialogue unfolds, so too does a subtle shift in how the world appears. Enjoy following that changing view, at the quiet pace of a cup of coffee.
+Mathematics and medicine appear along the way, but take only what you need. Some episodes include short R scripts, meant not as programming lessons but as small experiments you can rerun, to feel how assumptions become data. As the conversation unfolds, the view changes—quietly. I hope you enjoy following it, at the pace of a cup of coffee.
 
 ------------------------------------------------------------------------
 
 ## How to read this site
 
-Not sure where to begin? Start with **Study Design**.
+Not sure where to begin? Start with [**Study Design**](study-design-1.html).
 
-Each episode can be read on its own. From there, you can follow the story or choose whichever layer interests you. A few recommendations: [clinical trials and p-values](frequentist-1.html), and [causal inference in research](logistic-regression-1.html). Some episodes include short R scripts—not to teach programming, but to help you feel how causal questions and statistical assumptions take shape in data. Reading through the whole series connects scattered meanings, and you'll surely gain some insights.
+Each episode can be read on its own; from there, you can follow the story or choose whichever layer interests you—[clinical trials and p-values](frequentist-1.html), for example, or [causal inference in research](logistic-regression-1.html). When R scripts appear, they are there to make the ideas reproducible—and tangible. Read through the whole series and scattered meanings begin to connect—you’ll likely come away with a few new ways of seeing.
 
 ::: {.callout-note appearance="simple" collapse="true" title="R scripts for reproducing the episodes"}
 If you came here from an R post, you may want the code first. These scripts are meant to *reproduce the figures and ideas*, not to teach programming.
