--- a/jp/causal-inference-6.qmd
+++ b/jp/causal-inference-6.qmd
@@ -41,7 +41,7 @@ Keywords: causal model, probability model, p-value, language & writing
 :::
 
 ::: voice-daughter
-私「うん。あのね、セミナー聴きながらDAGについて考えてたんだ。お父さんがなにを説明してくれたのかって」
+私「うん。あのね、セミナー聴きながらDAGについて考えてたんだ。お父さんが何を説明してくれていたのかって」
 :::
 
 ::: voice-father
@@ -78,11 +78,11 @@ Keywords: causal model, probability model, p-value, language & writing
 :::
 
 ::: voice-daughter
-私「たしかに」
+私「そうそう。複雑さを整理し、曖昧性を減らす道具だね」
 :::
 
 ::: voice-father
-お父さん「そう考えると、Rを使ったシミュレーションもDAGと同じカテゴリなんじゃないかな。データが複雑になればなるほど、シミュレーションで数値実験をしないと、何が起きるか目に見えない。へえ、おもしろい分類だね」
+お父さん「そう考えると、Rを使ったシミュレーションもDAGと同じカテゴリなんじゃないかな。データが複雑になればなるほど、シミュレーションで数値実験をしないと、何が起きるか目に見えない。へえ、"VUCA"っておもしろい分類だね」
 :::
 
 ::: voice-daughter
@@ -90,11 +90,19 @@ Keywords: causal model, probability model, p-value, language & writing
 :::
 
 ::: voice-father
-お父さん「ああ、あのときは研究を取り巻く医療環境そのものの変化が激しかったよね。感染症以外の疾患でも、臨床試験のリクルート・データ収集が難しかった。外部環境におけるvolatility以外だと、JCOG9502のように中間解析の結果が出たり、未知の副作用が観察されたりすると、何らかの対応が求められるよね。確かにvolatilityも重要だね。これからますます変化が激しくなるとしたら、研究計画書を途中で変更しなければならないことも増えるかもしれない」
+お父さん「あのときは研究を取り巻く医療環境そのものの変化が激しかったよね。感染症以外の疾患でも、臨床試験のリクルート・データ収集が難しかった。外部環境におけるvolatility以外だと、JCOG9502のように中間解析の結果が出たり、未知の副作用が観察されたりすると、何らかの対応が求められるよね。確かにvolatilityも重要だね。これからますます変化が激しくなるとしたら、研究計画書を途中で変更しなければならないことも増えるかもしれない」
 :::
 
 ::: voice-daughter
-私「うん。それとね、セミナーの途中で思わずうなずいちゃったのはambiguityの話なんだ。研究でも同じだって思って。調査票を作るとき、情報バイアスを減らすには、曖昧な質問をしないのが一番だと思うし、言葉を定義しておくとぶれないってお父さんがいうのもよくわかる。言葉の曖昧性って、考えていたより深刻な問題だよね。データを扱うときって、情報は固定されていても、言語の方がぶれがちなんだ」
+私「ああ、たしかに。それとね、セミナーの途中で思わずうなずいちゃったのはambiguityの話なんだ。研究でも同じだって思って」
+:::
+
+::: voice-father
+お父さん「ふむ」
+:::
+
+::: voice-daughter
+私「調査票を作るとき、情報バイアスを減らすには、曖昧な質問をしないのが一番だと思うし、言葉を定義しておくとぶれないってお父さんがいうのもよく分かる。言葉の曖昧性って、考えていたより深刻な問題だよね。データを扱うときって、情報は固定されていても、言語の方がぶれがちなんだ」
 :::
 :::::::::::::::::::::::::::::::::
 
