--- a/jp/causal-inference-1.qmd
+++ b/jp/causal-inference-1.qmd
@@ -234,6 +234,7 @@ Keywords: causal model, clinical trial, confounding & collapsibility, observatio
 - [DAGs and Conditional Distributions: Two Languages for the Same Structure](causal-inference-3.html)
 - [A Circle, an Equation, and a Cylinder](causal-inference-4.html)
 - [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias](causal-inference-5.html)
+- [Volatility, Uncertainty, Complexity, and Ambiguity in Causal Inference](causal-inference-6.html)
 
 **過去のシリーズ**
 
