--- a/jp/causal-inference-6.qmd
+++ b/jp/causal-inference-6.qmd
@@ -70,11 +70,11 @@ Keywords: causal model, probability model, p-value, language & writing
 :::
 
 ::: voice-daughter
-私「でね、この4つにDAGを当てはめるとしたらcomplexityだって思ったんだ。観察研究で交絡因子の候補が多いとき必要なのはよくわかるし、デザインが単純明快になればなるほど、DAGを使ってcomplexityに対処しなくても済みそうだもの」
+私「でね、この4つにDAGを当てはめるとしたらcomplexityだって思ったんだ。観察研究で交絡因子の候補が多いとき役に立つっぽいし、デザインが単純明快になればなるほど、DAGを使ってcomplexityに対処しなくても済みそうだもの」
 :::
 
 ::: voice-father
-お父さん「そうだね、因果推論で出てくる課題をVUCAで整理するとしたら、DAGはcomplexityへの対処の道具なんだと思う。相互に関連する多くの変数を、交絡因子、中間媒介因子、合流点のどれかに分類したり、バックドア基準のような単純ルールを作ったりするのは、まさにそれだよね。それにDAGは、どこを仮定しているかを"見える形"にするから、ambiguityを減らす道具でもあるね」
+お父さん「そうだね、因果推論で出てくる課題をVUCAで整理するとしたら、DAGはcomplexityへの対処の道具なんだと思う。相互に関連する多くの変数を、交絡因子、中間媒介因子、合流点のどれかに分類したり、バックドア基準のような単純ルールを作ったりね。それにDAGは、何を仮定しているかを見せてくれるから、ambiguityを減らす道具でもあるね」
 :::
 
 ::: voice-daughter
@@ -90,7 +90,7 @@ Keywords: causal model, probability model, p-value, language & writing
 :::
 
 ::: voice-father
-お父さん「あのときは研究を取り巻く医療環境そのものの変化が激しかったよね。感染症以外の疾患でも、臨床試験のリクルート・データ収集が難しかった。外部環境におけるvolatility以外だと、JCOG9502のように中間解析の結果が出たり、未知の副作用が観察されたりすると、何らかの対応が求められるよね。確かにvolatilityも重要だね。これからますます変化が激しくなるとしたら、研究計画書を途中で変更しなければならないことも増えるかもしれない」
+お父さん「あのときは研究を取り巻く医療環境そのものの変化が激しかったよね。感染症以外の疾患でも、臨床試験のリクルート・データ収集が難しかった。新型コロナは外部環境におけるvolatilityっぽいけど、それ以外にも、JCOG9502のように中間解析の結果が出たり、未知の副作用が観察されたりすると、何らかの対応が求められるよね。確かに研究を行う上でvolatility対策も大切だね。これからますます変化が激しくなるとしたら、研究計画書を途中で変更しなければならないことも増えるかもしれない」
 :::
 
 ::: voice-daughter
